src/styles/cards.scss
#list-title {
    display: flex;
    justify-content: center;
    font-size: 24;
    font-style: italic;
    font-family: 'Montserrat', sans-serif;
    font-weight: 375;
}

main {
    width: 940px;
    color: $mocha;
}

section {
    display: flex;
    flex-flow: wrap;
    justify-content: center;
}

.card {
    position: relative;
    border-radius: 25px;
    margin: 20px;
    width: 270px;
    height: 500px;
    transform-style: preserve-3d;
    transition: all 1s ease;
    cursor: pointer;
    text-align: center;
}

.card.is-flipped {
    transform: rotateY(180deg);
}

.front-of-card {
    box-shadow: 2.5px 2.5px 2.5px #aa7160;
    // display: flex;
    position: absolute;
    border-radius: 25px;
    margin: 0px;
    padding: 30px;
    width: 210px;
    height: 440px;
    backface-visibility: hidden;
    background: $medium-blush;
}

.back-of-card {
    box-shadow: 2.5px 2.5px 2.5px #949c71;
    position: absolute;
    display: flex;
    flex-flow: column;
    border-radius: 25px;
    margin: 0px;
    padding: 30px;
    width: 210px;
    height: 440px;
    backface-visibility: hidden;
    background: $light-olive;
    color: $dark-olive;
    transform: rotateY(180deg);
}

img {
    width: 190px;
    padding: 0;
    height: auto;
    border-radius: 8px;
}

a {
    color: $dark-olive;
}

.title {
    font-size: 21;
    font-weight: 500;
    padding-top: 18;
}

.author {
    padding-top: 10px;
    font-weight: 400;
    font-size: 17;
}

.rank-week-div {
    display: flex;
    justify-content: space-evenly;
    margin-top: 18px;
}

.weeks_on_list {
    // position: absolute;
    // bottom: 18;
    // right: 54;
    font-size: 24;
    font-weight: 400;
}

.rank {
    // position: absolute;
    // bottom: 26;
    // left: 52;
    font-size: 24;
    font-weight: 400;
}

.weeks_on_list > p {
    font-style: italic;
    font-size: 13;
    width: 50;
    font-weight: 400;
}

.rank > p {
    padding-top: 4;
    font-style: italic;
    font-size: 13;
    // width: 50;
    font-weight: 400;
}

.description {
    // position: relative;
    // top: 30;
    font-weight: 400;
    font-size: 18;
    line-height: 1.25;
}

// .indie_bound_link {
//     position: relative;
//     bottom: -138;
// }

// .amazon_product_url {
//     position: relative;
//     bottom: -130;
// }

